--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
         "singleQuote": true,
         "trailingComma": "es5",
         "proseWrap": "always"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
